--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     </div>
                     <div class="div-ver-mais">
                         <div class="div-button-ver-mais">
-                            <a href="/verMais.html">Ver mais</a>
+                            <a href="/assets/pages/verMais.html">Ver mais</a>
                         </div>
                     </div>
                 </div>
