--- a/assets/pages/verMais.html
+++ b/assets/pages/verMais.html
@@ -46,7 +46,7 @@
         <section class="section-informações">
             <div class="div-main">
                 <div class="div-informacao">
-                    <div class="div-img"><img src="" alt=""></div>
+                    <div class="div-img"><img src="/assets/img/clinica-medcenter.jpeg" alt="foto da clinica ou hospital"></div>
                     <div class="div-nome">
                         <h1><a href="#mapa">Mapa</a></h1>
                     </div>
