--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
               </button>
                 <ul class="menu"id="menu">
                     <li><a href="/index.html">HOME</a></li>
-                    <li><a href="#catalogo">CATÁLOGO</a></li>
-                    <li><a href="#">SOBRE</a></li>
+                    <li><a href="/pages/sobre.html">SOBRE</a></li>
                 </ul>
         </nav>
     
@@ -72,7 +71,7 @@
                 </div>
              </div>
         
-            <div id="catalogo" class="div-catalogo">
+            <div class="div-catalogo">
                 <div class="div-linhas">
                 <div class="div-linha"></div>
                 <h2>Clínicas e Hospitais</h2>
