--- a/pages/verMais.html
+++ b/pages/verMais.html
@@ -27,8 +27,7 @@
             </button>
             <ul class="menu" id="menu">
                 <li><a href="/index.html">HOME</a></li>
-                <li><a href="#catalogo">CATÁLOGO</a></li>
-                <li><a href="#">SOBRE</a></li>
+                <li><a href="/pages/sobre.html">SOBRE</a></li>
             </ul>
         </nav>
 
