--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="container-menu">
-        <a href="/index.html"><h1>Web Saúde</h1></a>
+        <a href="/index.html"><img src="/assets/img/logo.PNG" alt="Logo">></a>
 
         <nav id="nav">
             <button id="btn-mobile" aria-expanded="false" aria-controls="menu" aria-haspopup="true" aria-label="Abrir Menu">
@@ -31,7 +31,7 @@
         <p>A saúde mais perto de você</p>
             </div>
             <div class="img-slogan">
-                <img src="/assets/img/undraw_medical_care_movn.svg" alt="img-slogan">
+                <img src="/assets/img/undraw_doctors_p6aq.svg" alt="img-slogan">
             </div>
         </section>
             <!-- section catalogo  -->
