--- a/pages/verMais.html
+++ b/pages/verMais.html
@@ -18,7 +18,7 @@
 <body>
 
     <header class="container-menu">
-        <a href="/index.html"><h1>Web Saúde</h1></a>
+        <a href="/index.html"><img src="/assets/img/logo.PNG" alt="Logo"></a>
 
         <nav id="nav">
             <button id="btn-mobile" aria-expanded="false" aria-controls="menu" aria-haspopup="true"
@@ -39,7 +39,7 @@
                 <h1>Clinica Medcenter</h1>
             </div>
             <div class="img-clinica-hospital">
-                <img src="/assets/img/undraw_medical_care_movn.svg" alt="img-clinica-hospital">
+                <img src="/assets/img/doutor-vermais.svg" alt="img-clinica-hospital">
             </div>
         </section>
         <section class="section-informações">
