atualizando a page sobre

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -9,7 +9,7 @@
 </head>
 <body>
         <!-- Desenvolvendo -->
-    <header class="container-menu">
+    <section class="container-menu">
         <a href="/index.html"><img src="/assets/img/logo.PNG" alt="Logo">></a>
 
         <nav id="nav">
@@ -21,7 +21,7 @@
                     <li><a href="/pages/sobre.html">SOBRE</a></li>
                 </ul>
         </nav>
-        </header>
+        </section>
     
     
         <main>
