--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <header class="container-menu">
-        <a href="/index.html"><img src="/assets/img/logo.PNG" alt="Logo">></a>
+        <div class="logo">
+        <a href="/index.html"><img src="/assets/img/logo.png" alt="Logo">></a>
+    </div>
 
         <nav id="nav">
             <button id="btn-mobile" aria-expanded="false" aria-controls="menu" aria-haspopup="true" aria-label="Abrir Menu">
