--- a/pages/verMais.html
+++ b/pages/verMais.html
@@ -18,7 +18,7 @@
 <body>
 
     <header class="container-menu">
-        <a href="/index.html"><img src="/assets/img/logo.PNG" alt="Logo"></a>
+        <a href="/index.html"><img src="/assets/img/logo.png" alt="Logo"></a>
 
         <nav id="nav">
             <button id="btn-mobile" aria-expanded="false" aria-controls="menu" aria-haspopup="true"
