--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="container-menu">
         <div class="logo">
-        <a href="/index.html"><img src="/assets/img/logo.png" alt="Logo">></a>
+        <a href="/index.html"><img src="/assets/img/logo.png" alt="Logo"></a>
     </div>
 
         <nav id="nav">
