--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -10,7 +10,7 @@
 <body>
         <!-- Desenvolvendo -->
     <section class="container-menu">
-        <a href="/index.html"><img src="/assets/img/logo.png" alt="Logo">></a>
+        <a href="/index.html"><img src="/assets/img/logo.png" alt="Logo"></a>
 
         <nav id="nav">
             <button id="btn-mobile" aria-expanded="false" aria-controls="menu" aria-haspopup="true" aria-label="Abrir Menu">
