--- a/index.html
+++ b/index.html
@@ -52,23 +52,21 @@
              <div class="div-buttons">
                 <div class="div-button">
                     <select name="" id="" >
-                        <option value="" selected>Hospital</option>
+                        <option value="" selected disabled>Hospital</option>
                         <option value=""> <a href="">Dr oscar </a></option>
                         </select>
                 </div>
                 <div class="div-button">
                     <select name="" id="" >
-                        <optgroup>
-                    <option value="" selected>Clínica</option>
+                    <option value="" selected disabled>Clínica</option>
                     <option value=""> <a href="">Medcenter </a></option>
                     <option value=""> <a href="">Clinica Popular </a></option>
-                </optgroup>
 
                 </select>
                 </div>
                 <div class="div-button">
                     <select name="" id="" >
-                        <option value="" selected>Especialidades</option>
+                        <option value="" selected disabled>Especialidades</option>
                         <option value=""> <a href="">Pediatra </a></option>
 
                     </select>
