--- a/index.html
+++ b/index.html
@@ -266,33 +266,6 @@
         </div>
         <img src="/assets/img/logo.png" alt="logo">
     </footer>
-    <script>
-        function clickMenu(){
-    if(itens.style.display == 'block'){
-    itens.style.display = 'none';
-    }
-   else{
-    itens.style.display = 'block';
-   }
-
-        }
-
-        const btnMobile = document.getElementById('btn-mobile');
-
-function toggleMenu(event){
-    if(event.type === 'touchstart'){
-        event.preventDefault();
-    const nav = document.getElementById('nav');
-    nav.classList.toggle('active');
-    constactive = nav.classList.contains('active')
-    }
- 
-}
-
-
-btnMobile.addEventListener('click',toggleMenu);
-btnMobile.addEventListener('touchstart',toggleMenu);
-
-    </script>
+    <script src="/assets/js/app.js"></script>
 </body>
 </html>
