--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Saúde</title>
+    <title>Web Saúde - Home</title>
     <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="shortcut icon" href="/assets/img/logo-icon.png" type="image/x-icon">
 
 </head>
 <body>
@@ -266,6 +267,8 @@
         </div>
         <img src="/assets/img/logo.png" alt="logo">
     </footer>
-    <script src="/assets/js/app.js"></script>
+    <script src="/assets/js/app.js">
+        
+    </script>
 </body>
 </html>
