--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Saúde - Sobre </title>
     <link rel="stylesheet" href="/assets/css/sobre.css">
+    <link rel="shortcut icon" href="/assets/img/logo-icon.png" type="image/x-icon">
+
 </head>
 <body>
         <!-- Desenvolvendo -->
