adicionando arquivo manifest.json

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Web Saúde - Home</title>
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="shortcut icon" href="/assets/img/logo-icon.png" type="image/x-icon">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="description" content="página inicial">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="PWA Workshop">
+    <meta name="apple-mobile-web-app-title" content="PWA Workshop">
 
 </head>
 <body>
