--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -7,18 +7,20 @@
     <title>Web Saúde - Sobre </title>
     <link rel="stylesheet" href="/assets/css/sobre.css">
     <link rel="shortcut icon" href="/assets/img/logo-icon.png" type="image/x-icon">
+    <link rel="manifest" href="/manifest.json">
+
 
 </head>
 <body>
-        <!-- Desenvolvendo -->
     <section class="container-menu">
         <a href="/index.html"><img src="/assets/img/logo.png" alt="Logo"></a>
 
         <nav id="nav">
-            <button id="btn-mobile" aria-expanded="false" aria-controls="menu" aria-haspopup="true" aria-label="Abrir Menu">
+            <button id="btn-mobile">
                 <span class="hamburger"></span>
               </button>
                 <ul class="menu"id="menu">
+                    <div class="button-entrar"><a href="/pages/login.html">ENTRAR</a></div>
                     <li><a href="/index.html">HOME</a></li>
                     <li><a href="/pages/sobre.html">SOBRE</a></li>
                 </ul>
@@ -88,5 +90,6 @@
 
                 </footer>
             <script src="/assets/js/app.js"></script>
+            <script src="/assets/js/index.js"></script>
 </body>
 </html>
