--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -31,7 +31,7 @@
         <main>
             <section class="section-titulo">
                 <h1>A saúde mais perto de você</h1>
-                <h2>Quem Somos</h2>
+                <h2>Quem Somos?</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ipsa consequuntur quasi beatae? 
                     Minus deserunt, ullam quod impedit cum numquam nostrum ducimus praesentium rerum provident 
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit ut minus vero
@@ -42,7 +42,7 @@
                       voluptatem quisquam distinctio. Quia dolorem autem magnam repudiandae eius
                        a quidem deleniti ipsa suscipit molestiae.
                     magni dicta? Rem, accusamus consectetur?</p>
-                <h2>Objetivo</h2>
+                <h2>Objetivos:</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, culpa! Iusto in, doloremque p
                     orro praesentium voluptatem dolores ratione nostrum molestiae eius natus sequi impedit ut,
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero rem quam labore esse 
