--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
             <!-- section catalogo  -->
         <section class="section-catalogo">
+            
                 <!-- button search  -->
-
             <div class="div-search">
                 <div class="input-search">
                 <input type="search" placeholder="Hospital/Clínica ou Especialidade">
@@ -86,7 +86,6 @@
                 <div class="div-linha"></div>
                 </div>
 
-        <!-- cards -->
             <!-- cards -->
             <section class="section-card">
             <div class="card-container">
@@ -259,7 +258,10 @@
         <section class="section-about">
             <h3>Sobre Nós</h3>
             <div class="div-about">
-            <p>O Web Saúde é uma plataforma que serve para auxiliar as pessoas que desconhecem informações essenciais sobre os hospitais ou clínicas que estão localizados na região de Picos - PI, mostrando as especialidades disponíveis, horário de atendimento ou até mesmo sua localização exata.</p>
+            <p>O Web Saúde é uma plataforma que serve para auxiliar as pessoas que 
+                desconhecem informações essenciais sobre os hospitais ou clínicas 
+                que estão localizados na região de Picos - PI, mostrando as especialidades 
+                disponíveis, horário de atendimento ou até mesmo sua localização exata.</p>
          </div>
         </section>
     </main>
