--- a/pages/clinica.html
+++ b/pages/clinica.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro clinica</title>
     <link rel="stylesheet" href="/assets/css/clinica.css">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap" rel="stylesheet">
 </head>
 <body>
     <main>
@@ -42,4 +46,5 @@
         </section>
     </main>
 </body>
+<script src="/assets/js/index.js"></script>
 </html>
