--- a/pages/endereco.html
+++ b/pages/endereco.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Aúde - endereço</title>
     <link rel="shortcut icon" href="/assets/img/logo.png" type="image/x-icon">
+    <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="/assets/css/endereco.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="main-container">
@@ -36,4 +40,6 @@
         </div>
     </section>
 </body>
+<script src="/assets/js/index.js"></script>
+
 </html>
