--- a/pages/hospital.html
+++ b/pages/hospital.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro hospital</title>
     <link rel="stylesheet" href="/assets/css/hospital.css">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap" rel="stylesheet">
 </head>
 <body>
     <main>
@@ -28,5 +32,7 @@
              
         </section>
     </main>
+    <script src="/assets/js/index.js"></script>
+
 </body>
 </html>
