--- a/pages/login.html
+++ b/pages/login.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Saúde - Login</title>
     <link rel="stylesheet" href="/assets/css/login.css">
+    <link rel="shortcut icon" href="/assets/img/logo.png" type="image/x-icon">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="main-container">
@@ -27,5 +32,7 @@
             </div>
         </div>
     </section>
+    <script src="/assets/js/index.js"></script>
+
 </body>
 </html>
