--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="/assets/css/sobre.css">
     <link rel="shortcut icon" href="/assets/img/logo-icon.png" type="image/x-icon">
     <link rel="manifest" href="/manifest.json">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap" rel="stylesheet">
 
 </head>
 <body>
