--- a/pages/hospital.html
+++ b/pages/hospital.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="cadastrar hospital">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="WEB SAÚDE">
+    <meta name="apple-mobile-web-app-title" content="PWA Workshop">
     <title>Cadastro hospital</title>
     <link rel="stylesheet" href="/assets/css/hospital.css">
     <link rel="manifest" href="/manifest.json">
