--- a/pages/clinica.html
+++ b/pages/clinica.html
@@ -9,6 +9,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="application-name" content="WEB SAÚDE">
     <meta name="apple-mobile-web-app-title" content="PWA Workshop">
+    <meta name="theme-color" content="#00285f">
     <title>Cadastro clinica</title>
     <link rel="stylesheet" href="/assets/css/clinica.css">
     <link rel="manifest" href="/manifest.json">
