--- a/pages/verMais.html
+++ b/pages/verMais.html
@@ -10,6 +10,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="application-name" content="WEB SAÚDE">
     <meta name="apple-mobile-web-app-title" content="PWA Workshop">
+    <meta name="theme-color" content="#00285f">
     <title>Web Saúde - Ver mais</title>
     <link rel="stylesheet" href="/assets/css/VerMais.css">
     <link rel="shortcut icon" href="/assets/img/logo-icon.png" type="image/x-icon">
@@ -181,7 +182,8 @@
                 </div>
                 </div>
             </div>
-   
+
+        <div id="loading" class="loading loading-lg"></div>
         <div id="mapa" class="div-mapa"></div>
 
     </main>
