--- a/pages/endereco.html
+++ b/pages/endereco.html
@@ -9,6 +9,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="application-name" content="WEB SAÚDE">
     <meta name="apple-mobile-web-app-title" content="PWA Workshop">
+    <meta name="theme-color" content="#00285f">
     <title>Web Aúde - endereço</title>
     <link rel="shortcut icon" href="/assets/img/logo.png" type="image/x-icon">
     <link rel="manifest" href="/manifest.json">
