--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -9,6 +9,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="application-name" content="WEB SAÚDE">
     <meta name="apple-mobile-web-app-title" content="PWA Workshop">
+    <meta name="theme-color" content="#00285f">
+
     <title>Web Saúde - Sobre </title>
     <link rel="stylesheet" href="/assets/css/sobre.css">
     <link rel="shortcut icon" href="/assets/img/logo-icon.png" type="image/x-icon">
