--- a/index.html
+++ b/index.html
@@ -64,23 +64,23 @@
                         <!-- filtros -->
              <div class="div-buttons">
                 <div class="div-button">
-                    <select name="" id="" >
-                        <option value="" selected disabled>Hospital</option>
-                        <option value=""> <a href="">Dr oscar </a></option>
-                        </select>
+                    <selecct>
+                        <option selected disabled>Hospital</option>
+                        <option> <a href="#">Dr oscar </a></option>
+                        </selecct>
                 </div>
                 <div class="div-button">
-                    <select name="" id="" >
-                    <option value="" selected disabled>Clínica</option>
-                    <option value=""> <a href="">Medcenter </a></option>
-                    <option value=""> <a href="">Clinica Popular </a></option>
+                    <select>
+                    <option selected disabled>Clínica</option>
+                    <option> <a href="#">Medcenter </a></option>
+                    <option> <a href="#">Clinica Popular </a></option>
 
                 </select>
                 </div>
                 <div class="div-button">
                     <select name="" id="" >
-                        <option value="" selected disabled>Especialidades</option>
-                        <option value=""> <a href="">Pediatra </a></option>
+                        <option  selected disabled>Especialidades</option>
+                        <option> <a href="#">Pediatra </a></option>
 
                     </select>
                 </div>
