--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                         <!-- filtros -->
              <div class="div-buttons">
                 <div class="div-button">
-                    <selecct>
+                    <select name="" id="" >
                         <option selected disabled>Hospital</option>
                         <option> <a href="#">Dr oscar </a></option>
-                        </selecct>
+                        </select>
                 </div>
                 <div class="div-button">
                     <select>
