update mapa e footer

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -99,7 +99,7 @@
             <a href="#" class="link-1">Fale Conosco</a>
           
           </p>
-          <p>Company Name © 2015</p>
+          <p>Web Saúde © 2023</p>
         </div>
   
         <div class="footer-center">
