--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             <a href="#" class="link-1">Fale Conosco</a>
           
   
-          <p>Company Name © 2015</p>
+          <p>Web Saúde © 2023</p>
         </div>
   
         <div class="footer-center">
