--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
   
           <img src="/assets/img/logo.png" alt="Logo">   
           <p class="footer-links">
-            <a href="#" class="link-1">Fale Conosco</a>
+            <a href="/pages/faleConosco.html" class="link-1">Fale Conosco</a>
           
   
           <p>Web Saúde © 2023</p>
