--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <meta name="application-name" content="WEB SAÚDE">
     <meta name="apple-mobile-web-app-title" content="PWA Workshop">
     <meta name="theme-color" content="#00285f">
-    <title>Web Saúde - Home</title>
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="shortcut icon" href="/assets/img/logo-icon.png" type="image/x-icon">
     <link rel="manifest" href="/manifest.json">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap" rel="stylesheet">
+    <title>Web Saúde - Home</title>
 
 </head>
 <body>
@@ -29,8 +29,8 @@
             <button id="btn-mobile">
                 <span class="hamburger"></span>
               </button>
-                <ul class="menu"id="menu">
-                    <div class="button-entrar"><a href="/pages/login.html">ENTRAR</a></div>
+                <ul class="menu" id="menu">
+                    <div class="button-entrar"><a href="/pages/painelAdministrativo.html">ENTRAR</a></div>
                     <li><a href="/index.html">HOME</a></li>
                     <li><a href="/pages/sobre.html">SOBRE</a></li>
                 </ul>
@@ -253,12 +253,12 @@
         </section>
                <!--buttons catálogo -->
                <div class="div-buttons-catalogo">
-                <div class="buuton-prox-ant"><a href="">Anterior</a></div>
-                <div class="button-catalogo"><a href="">1</a></div>
-                <div class="button-catalogo"><a href="">2</a></div>
-                <div class="button-catalogo"><a href="">3</a></div>
-                <div class="button-catalogo"><a href="">4</a></div>
-                <div class="buuton-prox-ant"><a href="">Próximo</a></div>
+                <div class="buuton-prox-ant"><a href="#">Anterior</a></div>
+                <div class="button-catalogo"><a href="#">1</a></div>
+                <div class="button-catalogo"><a href="#">2</a></div>
+                <div class="button-catalogo"><a href="#">3</a></div>
+                <div class="button-catalogo"><a href="#">4</a></div>
+                <div class="buuton-prox-ant"><a href="#">Próximo</a></div>
                </div>
             </div>
         </section>
@@ -298,9 +298,7 @@
                     disponíveis, horário de atendimento ou até mesmo sua localização exata.</p>
         
         </div>
-  
       </footer>
-
     <script src="./assets/js/app.js">
     </script>
     <script src="/assets/js/index.js"></script>
