--- a/pages/faleConosco.html
+++ b/pages/faleConosco.html
@@ -39,11 +39,11 @@
         <div class="div-form">
           
         <form action="#">
-          <div class="logo">
-            <img src="" alt="logo">
+          <div class="div-logo">
+            <img src="/assets/img/logo.png" alt="logo">
            </div>
   
-          <h1>Contato</h1>
+          <h1>Fale Conosco</h1>
           <div class="div-inputs">
             <label for="nome">Nome</label>
             <input type="text" name="" id="">
@@ -64,7 +64,7 @@
 
         <img src="/assets/img/logo.png" alt="Logo">   
         <p class="footer-links">
-          <a href="#" class="link-1">Fale Conosco</a>
+          <a href="/pages/faleConosco.html" class="link-1">Fale Conosco</a>
         
 
         <p>Web Saúde © 2023</p>
@@ -89,7 +89,7 @@
                   que estão localizados na região de Picos - PI, mostrando as especialidades 
                   disponíveis, horário de atendimento ou até mesmo sua localização exata.</p> 
       </div>
-      <script src="./assets/js/app.js">
+      <script src="/assets/js/app.js">
       </script>
       <script src="/assets/js/index.js"></script>
   
