--- a/pages/verMais.html
+++ b/pages/verMais.html
@@ -194,7 +194,7 @@
 
      <img src="/assets/img/logo.png" alt="Logo">   
      <p class="footer-links">
-       <a href="#" class="link-1">Fale Conosco</a>
+       <a href="/pages/faleConosco.html" class="link-1">Fale Conosco</a>
      
 
      <p>Web Saúde © 2023</p>
