--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <span class="hamburger"></span>
               </button>
                 <ul class="menu" id="menu">
-                    <div class="button-entrar"><a href="/pages/painelAdministrativo.html">ENTRAR</a></div>
+                    <div class="button-entrar"><a href="/pages/login.html">ENTRAR</a></div>
                     <li><a href="/index.html">HOME</a></li>
                     <li><a href="/pages/sobre.html">SOBRE</a></li>
                 </ul>
