--- a/pages/login.html
+++ b/pages/login.html
@@ -33,7 +33,7 @@
 
             </div>
             <div class="div-button div-campos">
-                <button>Entrar</button>
+                <button><a href="/pages/painelAdministrativo.html">Entrar</a></button>
             </div>
             <div class="div-cadastro">
             </div>
