--- a/pages/painelAdministrativo.html
+++ b/pages/painelAdministrativo.html
@@ -48,12 +48,12 @@
                         </a>
                     </li>
                     <li>
-                       <a href="">
+                       <a href="/pages/clinica.html">
                             <small>Cadastrar Clínica</small>
                         </a>
                     </li>
                     <li>
-                       <a href="">
+                       <a href="/pages/hospital.html">
                             <small>Cadastrar Hospital</small>
                         </a>
                     </li>
