--- a/pages/clinica.html
+++ b/pages/clinica.html
@@ -10,12 +10,14 @@
     <meta name="application-name" content="WEB SAÚDE">
     <meta name="apple-mobile-web-app-title" content="PWA Workshop">
     <meta name="theme-color" content="#00285f">
-    <title>Cadastro clinica</title>
     <link rel="stylesheet" href="/assets/css/clinica.css">
+    <link rel="shortcut icon" href="/assets/img/logo-icon.png" type="image/x-icon">
     <link rel="manifest" href="/manifest.json">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap" rel="stylesheet">
+    <title>Cadastro clinica</title>
+
 </head>
 <body>
     <main>
