--- a/pages/endereco.html
+++ b/pages/endereco.html
@@ -10,13 +10,13 @@
     <meta name="application-name" content="WEB SAÚDE">
     <meta name="apple-mobile-web-app-title" content="PWA Workshop">
     <meta name="theme-color" content="#00285f">
-    <title>Web Aúde - endereço</title>
-    <link rel="shortcut icon" href="/assets/img/logo.png" type="image/x-icon">
     <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="/assets/css/endereco.css">
+    <link rel="shortcut icon" href="/assets/img/logo-icon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap" rel="stylesheet">
+    <title>Web Aúde - endereço</title>
 </head>
 <body>
     <section class="main-container">
