--- a/pages/clinica.html
+++ b/pages/clinica.html
@@ -16,13 +16,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap" rel="stylesheet">
-    <title>Cadastro clinica</title>
+    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
+    <title>Web Saúde - Cadastrar Clínica</title>
 
 </head>
 <body>
+
+    <header>
+        <div class="user">
+            <a href="/pages/login.html">
+            <span class="las la-power-off"></span>
+            <span>Logout</span></a>
+        </div>
+    </header>
     <main>
         <section class="section-form">
-            <a href="/index.html">Home</a>
+            <a href="/pages/painelAdministrativo.html">Painel</a>
             <h1 class="titulo-cadastro">CADASTRAR CLÍNICA</h1>
             <div class="div-formulario">
                 <input class="div-button" type="text" placeholder="Nome" required>
@@ -46,7 +55,7 @@
                 <option value="" selected disabled>ESPECIALIDADES</option>
             </select>
             <div class="div-button">
-                <button class="div-button">PRÓXIMO</button>
+                <a href="/pages/endereco.html">  <button class="div-button">PRÓXIMO</button></a>
             </div>
             </div>
             
