--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-title" content="PWA Workshop">
     <meta name="theme-color" content="#00285f">
     <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="shortcut icon" href="/assets/img/logo-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/img/logo-icon-1.PNG" type="image/x-icon">
     <link rel="manifest" href="/manifest.json">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -57,7 +57,7 @@
                 <div class="input-search">
                 <input type="search" placeholder="Hospital/Clínica ou Especialidade">
                 <div class="button-search">
-                    <a href="/">Search</a>
+                    <a href="/">Buscar</a>
                     </div>
                 </div>
             </div>
