--- a/pages/faleConosco.html
+++ b/pages/faleConosco.html
@@ -10,12 +10,14 @@
   <meta name="application-name" content="WEB SAÚDE">
   <meta name="apple-mobile-web-app-title" content="PWA Workshop">
   <meta name="theme-color" content="#00285f">
-  <title>Web Saúdde - Fale Conosco</title>
   <link rel="stylesheet" href="/assets/css/faleConosco.css">
+  <link rel="shortcut icon" href="/assets/img/logo-icon-1.PNG" type="image/x-icon">
   <link rel="manifest" href="/manifest.json">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap" rel="stylesheet">
+  <title>Web Saúdde - Fale Conosco</title>
+
 </head>
 <body>
   <header class="container-menu">
@@ -49,7 +51,7 @@
             <input type="text" name="" id="">
             <label for="email">Email</label>
             <input type="email" name="" id="">
-            <textarea name="" id="" cols="30" rows="10"></textarea>
+            <textarea name="" id="" cols="30" rows="10" placeholder="Mensagem"></textarea>
           </div>
           <div class="div-button">
             <button type="submit">Enviar</button>
