--- a/pages/login.html
+++ b/pages/login.html
@@ -13,7 +13,7 @@
 
     <title>Web Saúde - Login</title>
     <link rel="stylesheet" href="/assets/css/login.css">
-    <link rel="shortcut icon" href="/assets/img/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/img/logo-icon-1.PNG" type="image/x-icon">
     <link rel="manifest" href="/manifest.json">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
