--- a/pages/verMais.html
+++ b/pages/verMais.html
@@ -11,9 +11,8 @@
     <meta name="application-name" content="WEB SAÚDE">
     <meta name="apple-mobile-web-app-title" content="PWA Workshop">
     <meta name="theme-color" content="#00285f">
-    <title>Web Saúde - Ver mais</title>
     <link rel="stylesheet" href="/assets/css/VerMais.css">
-    <link rel="shortcut icon" href="/assets/img/logo-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/img/logo-icon-1.PNG" type="image/x-icon">
     <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
@@ -27,6 +26,8 @@
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap" rel="stylesheet">
+     <title>Web Saúde - Ver mais</title>
+
 </head>
 
 <body>
