--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-title" content="PWA Workshop">
     <meta name="theme-color" content="#00285f">
     <link rel="stylesheet" href="/assets/css/sobre.css">
-    <link rel="shortcut icon" href="/assets/img/logo-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/img/logo-icon-1.PNG" type="image/x-icon">
     <link rel="manifest" href="/manifest.json">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
