ataulizando e adicionando api do cep

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-title" content="PWA Workshop">
     <meta name="theme-color" content="#00285f">
     <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="shortcut icon" href="/assets/img/logo-icon-1.PNG" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/img/favicon.png" type="image/x-icon">
     <link rel="manifest" href="/manifest.json">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -266,7 +266,7 @@
   
           <img src="/assets/img/logo.png" alt="Logo">   
           <p class="footer-links">
-            <a href="/pages/faleConosco.html" class="link-1">Fale Conosco</a>
+            <a href="/pages/faleConosco.html" class="link-1">Fale Conosco</a></p>
           
   
           <p>Web Saúde © 2023</p>
