--- a/pages/login.html
+++ b/pages/login.html
@@ -13,23 +13,24 @@
 
     <title>Web Saúde - Login</title>
     <link rel="stylesheet" href="/assets/css/login.css">
-    <link rel="shortcut icon" href="/assets/img/logo-icon-1.PNG" type="image/x-icon">
     <link rel="manifest" href="/manifest.json">
+    <link rel="shortcut icon" href="/assets/img/favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <header><a href="/index.html"><h1>Home</h1></a></header>
     <section class="main-container">
         <div class="container">
               
             <div class="div-logo div-campos">
-         
                 <a href="/index.html"><img src="/assets/img/logo.png" alt="logo"></a>
             </div>
 
             <div class="div-inputs div-campos">
-                <input type="text" placeholder="Usuário" required>
+                <input type="email" placeholder="Email" required>
                 <input type="password" placeholder="Senha" required>
 
             </div>
