--- a/pages/endereco.html
+++ b/pages/endereco.html
@@ -12,7 +12,7 @@
     <meta name="theme-color" content="#00285f">
     <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="/assets/css/endereco.css">
-    <link rel="shortcut icon" href="/assets/img/logo-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/img/favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap" rel="stylesheet">
@@ -23,12 +23,11 @@
 <body>
         <header>
             <div class="user">
-                <a href="/pages/login.html">
-                <span class="las la-power-off"></span>
-                <span>Logout</span></a>
+                <a href="/pages/login.html" class="las la-power-off">
+                Logout</a>
             </div>
         </header>
-        <section class="main-container">
+        <form method="get" action="." class="main-container">
             <div class="container">
                 
             <div class="div-home">
@@ -39,12 +38,12 @@
             </div>
 
             <div class="div-inputs div-campos">
-                <input type="text" placeholder="Cep" required>
-                <input type="text" placeholder="Logradouro" required>
-                <input type="number" placeholder="Número" required>
-                <input type="text" placeholder="Bairro" required>
-                <input type="text" placeholder="Cidade" required>
-                <input type="text" placeholder="Estado" required>
+                <input type="text" name="cep" placeholder="Cep" id="cep" value="" onblur="pesquisacep(this.value);" required>
+                <input type="text" name="rua" placeholder="Logradouro" id="rua" required>
+                <input type="number" name="rua" placeholder="Número" required>
+                <input type="text" name="bairro" placeholder="Bairro" id="bairro" required>
+                <input type="text" name="cidade" placeholder="Cidade" id="cidade" required>
+                <input type="text" name="uf" placeholder="Estado" id="uf" required>
                 
             </div>
             <div class="div-button div-campos">
@@ -53,8 +52,9 @@
             <div class="div-cadastro">
             </div>
         </div>
-    </section>
+        </form>
 </body>
+<script src="/assets/js/APIS/cep.js"></script>
 <script src="/assets/js/index.js"></script>
 
 </html>
