--- a/pages/hospital.html
+++ b/pages/hospital.html
@@ -11,13 +11,12 @@
     <meta name="apple-mobile-web-app-title" content="PWA Workshop">
     <meta name="theme-color" content="#00285f">
     <link rel="stylesheet" href="/assets/css/hospital.css">
-    <link rel="shortcut icon" href="/assets/img/logo-icon-1.PNG" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/img/favicon.png" type="image/x-icon">
     <link rel="manifest" href="/manifest.json">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
-
     <title>Web Saúde - Cadastrar Hospital</title>
 
 </head>
@@ -26,7 +25,7 @@
         <div class="user">
             <a href="/pages/login.html">
             <span class="las la-power-off"></span>
-            <span>Logout</span></a>
+            Logout</a>
         </div>
     </header>
     <main>
@@ -36,14 +35,14 @@
             <div class="div-formulario">
                 <input class="div-button" type="text" placeholder="Nome" required>
             <label class="div-button">
-                <input type="file" accept="image/*" class="input-imagem">
+                <input type="file cursor" accept="image/*" class="input-imagem">
                 <span>Escolha a imagem</span>
             </label>
-            <select  class="div-button" name="" id="">
+            <select  class="div-button cursor" name="" id="">
                 <option value="" selected disabled>ESPECIALIDADES</option>
             </select>
             <div class="div-button">
-              <a href="/pages/endereco.html">  <button class="div-button">PRÓXIMO</button></a>
+              <a href="/pages/endereco.html"> <button class="div-button-prox">PRÓXIMO</button></a>
             </div>
             </div>
              
