--- a/pages/clinica.html
+++ b/pages/clinica.html
@@ -29,12 +29,18 @@
             Logout</a>
         </div>
     </header>
+
+    <section class="section-content">
+    <div class="div-nomes">
+        <a href="/pages/painelAdministrativo.html">Painel</a>
+        <h1 class="titulo-cadastro">CADASTRAR CLÍNICA</h1>
+    </div>
     <main>
+
         <section class="section-form">
-            <a href="/pages/painelAdministrativo.html">Painel</a>
-            <h1 class="titulo-cadastro">CADASTRAR CLÍNICA</h1>
+          
             <div class="div-formulario">
-                <input class="div-button" type="text" placeholder="Nome" required>
+                <input class="div-inputs" type="text" placeholder="Nome" required>
             <label class="div-button">
                 <input type="file" accept="image/*" class="input-imagem">
                 <span>Escolha a imagem</span>
@@ -61,6 +67,8 @@
             
         </section>
     </main>
-</body>
+</section>
 <script src="/assets/js/index.js"></script>
+
+</body>
 </html>
