--- a/pages/faleConosco.html
+++ b/pages/faleConosco.html
@@ -16,7 +16,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap" rel="stylesheet">
-  <title>Web Saúdde - Fale Conosco</title>
+  <title>Web Saúde - Fale Conosco</title>
 
 </head>
 <body>
