--- a/pages/endereco.html
+++ b/pages/endereco.html
@@ -18,12 +18,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
 
-    <title>Web SAúde - Endereço</title>
+    <title>Web Saúde - Endereço</title>
 </head>
 <body>
         <header>
             <div class="user">
-                <a href="/pages/login.html" class="las la-power-off">
+                
+                <a href="/pages/login.html">
+                <span class="las la-power-off"></span>
                 Logout</a>
             </div>
         </header>
