--- a/pages/hospital.html
+++ b/pages/hospital.html
@@ -28,10 +28,12 @@
             Logout</a>
         </div>
     </header>
-    <main>
-        <section class="section-form">
+    <section class="section-content">
+        <div class="div-nomes">
             <a href="/pages/painelAdministrativo.html">Painel</a>
             <h1 class="titulo-cadastro">CADASTRAR HOSPITAL</h1>
+       </div>
+     <main>
             <div class="div-formulario">
                 <input class="div-button" type="text" placeholder="Nome" required>
             <label class="div-button">
@@ -48,7 +50,8 @@
              
         </section>
     </main>
+    </section>
     <script src="/assets/js/index.js"></script>
-
+ 
 </body>
 </html>
