--- a/pages/hospital.html
+++ b/pages/hospital.html
@@ -35,7 +35,7 @@
        </div>
      <main>
             <div class="div-formulario">
-                <input class="div-button" type="text" placeholder="Nome" required>
+                <input class="div-inputs" type="text" placeholder="Nome" required>
             <label class="div-button">
                 <input type="file cursor" accept="image/*" class="input-imagem">
                 <span>Escolha a imagem</span>
@@ -44,7 +44,7 @@
                 <option value="" selected disabled>ESPECIALIDADES</option>
             </select>
             <div class="div-button">
-              <a href="/pages/endereco.html"> <button class="div-button-prox">PRÓXIMO</button></a>
+              <a href="/pages/endereco.html"><button class="div-button-prox">PRÓXIMO</button></a>
             </div>
             </div>
              
