button ver mais

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <li><a href="/pages/sobre.html">SOBRE</a></li>
                 </ul>
         </nav>
-        
+
     </header>
     <main>
             <!-- slogan  -->
@@ -103,7 +103,7 @@
                         64600-148</p>
                         <p>Aberto de Segunda a Sexta das <Strong> 07:00</Strong> até as <Strong>18:00</Strong></p>
                         <div class="div-ver-mais btn-margin">
-                            <div class="div-button-ver-mais div-button-ver-mais-hospitais">
+                            <div class="div-button-ver-mais">
                                 <a href="/pages/verMais.html">Ver mais</a>
                             </div>
                     </div>
@@ -121,7 +121,7 @@
                     </p>
                     <p>Aberto de Segunda a Sexta das <Strong>07:00</Strong> até as <Strong>18:30</Strong></p>
                     <div class="div-ver-mais btn-margin">
-                        <div class="div-button-ver-mais div-button-ver-mais-hospitais">
+                        <div class="div-button-ver-mais">
                             <a href="">Ver mais</a>
                         </div>
                 </div>
@@ -138,7 +138,7 @@
                     <p>Av. Nossa Sra. de Fátima, 682 - Centro, Picos - PI, 64600-146</p>
                     <p>Aberto de Segunda a Sexta das <Strong> 07:00</Strong> até as <Strong>17:30</Strong></p>
                     <div class="div-ver-mais btn-margin">
-                        <div class="div-button-ver-mais div-button-ver-mais-hospitais">
+                        <div class="div-button-ver-mais">
                             <a href="">Ver mais</a>
                         </div>
                 </div>
@@ -155,7 +155,7 @@
                     <p>Av. Getúlio Vargas, 504 - Centro, Picos - PI, 64600-000</p>
                     <p>Aberto de Segunda a Sexta das <Strong> 08:00</Strong> até as <Strong>18:00</Strong></p>
                     <div class="div-ver-mais btn-margin">
-                        <div class="div-button-ver-mais div-button-ver-mais-hospitais">
+                        <div class="div-button-ver-mais">
                             <a href="">Ver mais</a>
                         </div>
                 </div>
@@ -172,7 +172,7 @@
                     <p>Av. Getúlio Vargas, s/n - Centro, Picos - PI, 64600-000</p>
                     <p>Aberto de Segunda a Sexta das <Strong> 07:00</Strong> até as <Strong>17:00</Strong></p>
                     <div class="div-ver-mais btn-margin">
-                    <div class="div-button-ver-mais div-button-ver-mais-hospitais">
+                    <div class="div-button-ver-mais">
                         <a href="">Ver mais</a>
                     </div>
             </div>
@@ -189,7 +189,7 @@
                     <p>Av. Nossa Sra. de Fátima, 733 - Malva, Picos - PI, 64600-000</p>
                     <p>Aberto de Segunda a Sexta das <Strong> 08:00</Strong> até as <Strong>17:00</Strong></p>
                     <div class="div-ver-mais btn-margin">
-                        <div class="div-button-ver-mais div-button-ver-mais-hospitais">
+                        <div class="div-button-ver-mais">
                             <a href="">Ver mais</a>
                         </div>
                 </div>
@@ -206,7 +206,7 @@
                     <p>R. Monsenhor Hipólito, 559 - Centro, Picos - PI, 64600-104</p>
                     <p>Aberto de Segunda a Sexta das <Strong> 07:00</Strong> até as <Strong>17:00</Strong></p>
                     <div class="div-ver-mais btn-margin">
-                        <div class="div-button-ver-mais div-button-ver-mais-hospitais">
+                        <div class="div-button-ver-mais">
                             <a href="">Ver mais</a>
                         </div>
                 </div>                                </div>
@@ -222,7 +222,7 @@
                     <p>R. Osvaldo Cruz, 357, Picos - PI, 64600-000</p>
                     <p>Aberto de Segunda a Sexta das <Strong> 07:00</Strong> até as <Strong>17:00</Strong></p>
                     <div class="div-ver-mais btn-margin">
-                        <div class="div-button-ver-mais div-button-ver-mais-hospitais">
+                        <div class="div-button-ver-mais">
                             <a href="">Ver mais</a>
                         </div>
                 </div>
