--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     <p> Av. Nossa Sra. de Fátima, 670 - Canto da Várzea, Picos - PI, 64600-146</p>
                     <p>Todos os dias: <Strong> Atendimento 24 horas</Strong></p>
                     <div class="div-ver-mais btn-margin">
-                        <div class="div-button-ver-mais div-button-ver-mais-hospitais">
+                        <div class="div-button-ver-mais-hospitais">
                             <a href="#">Ver mais</a>
                         </div>
                 </div>
