--- a/pages/login.html
+++ b/pages/login.html
@@ -35,7 +35,7 @@
 
             </div>
             <div class="div-button div-campos">
-                <button><a href="/pages/painelAdministrativo.html">Entrar</a></button>
+                <a href="/pages/painelAdministrativo.html"> <button>Entrar</button></a>
             </div>
             <div class="div-cadastro">
             </div>
