--- a/pages/endereco.html
+++ b/pages/endereco.html
@@ -49,7 +49,7 @@
                 
             </div>
             <div class="div-button div-campos">
-              <a href="/pages/painelAdministrativo.html"><button>Entrar</button></a>
+              <a href="/pages/painelAdministrativo.html"><button>Cadastrar</button></a>
             </div>
             <div class="div-cadastro">
             </div>
